--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,6 +2,7 @@ authors:
   gde_americas:
     name: GDE Americas Team
     description: Google Developer Experts from across the Americas
+    avatar: https://blog.gdeltproject.org/wp-content/uploads/2023-12-gde.png
     
   xbill9: 
     name: xbill
